--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,8 @@ img
 .icon
 {
   align-self: center;
+  padding-left: 0.3rem;
+  padding-right: 0.3rem;
 }
 
 
@@ -149,6 +151,8 @@ h2 span
 {
   text-align: center;
   align-self: center;
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
 
 
