--- a/src/index.css
+++ b/src/index.css
@@ -147,6 +147,7 @@ h2 span
   margin: auto;
 }
 
+
 .project-description
 {
   text-align: center;
@@ -154,6 +155,24 @@ h2 span
   padding-right: 1rem;
   padding-left: 1rem;
 }
+
+.landing-picture .web
+{
+  display: none;
+  overflow: hidden;
+}
+
+.landing-picture .mobile
+{
+  display: block;
+}
+
+.project
+{
+  cursor: pointer;
+}
+
+
 
 
 
@@ -165,4 +184,54 @@ h2 span
   font-size: 2rem;
 
 }
+
+.icons
+{
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.projects-section
+{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.projects-section h2
+{
+  grid-column: 1/-1;
+}
+
+.project
+{
+  border-right: 1px ridge rgba(0, 44, 44, 0.4);
+  border-bottom:  1px ridge rgba(0, 44, 44, 0.4);
+
+
+}
+
+.project:nth-of-type(1), .project:nth-of-type(2), .project:nth-of-type(3)
+{
+  border-top: 1px ridge rgba(0, 44, 44, 0.4);
+}
+
+.contact-card {
+
+ background-color: rgba(0, 44, 44, 0.7);
+ width: 350px;
+}
+
+
+.landing-picture .web
+{
+  display: block;
+}
+
+.landing-picture .mobile
+{
+  display: none;
+  overflow: hidden;
+}
+
+
 }
