--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,13 @@ img
 
 }
 
+.project-image {
+  width: 70px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+
 .contact-button svg
 {
   margin-left: 0.5rem;
@@ -232,6 +239,7 @@ h2 span
   display: none;
   overflow: hidden;
 }
+
 
 
 }
